  accounts from being born as girls (if not Eve).  Useful for bots, to make
  sure bots are never mothers.

--Fixed so that AHAP leader votes are tracked internally by github account
  name, and not by email.  This fixes the problem where one user specifies
  someone else's github as their own to falsely receive votes for themselves.
  Part of #1112




Version 428    2024-July-11

--Added more logging around cases where startUpdate in diffBundleClient fails.
  Part of jasonrohrer/OneLife#1082

--Fixed crash when viewing email on SERVICES page if email blank.  Fixes #1085

--Fixed so that authorship hash is NOT overwritten when editing an object.
  Original authorship of an object is preserved, even if the object is
  modified later by someone else.  Fixes #1093




Server Fixes:

--Fixed AHAPGate to handle names with apostrophes.  Thanks Aaron O.

--Fixed so that Rocket Ride animation is not shown to tutorial players, which
  might confuse them (unless the tutorial player themself is riding the
  rocket).  Part of #1080

--Fixed to not send Monument Call (MN) messages to tutorial players, which can
  be confusing.  Thus, tutorial players no longer get arrows to the rocket,
  bell, or endtower.  Fixes #1080




Version 427   2024-May-31

--Apocalypse jumps everyone back to (0,0).  Part of #1069

--When Apocalypse jumps everyone back to (0,0), it now preserves relative
  positioning amoung clusters of nearby people.  This means people aren't all
  slammed together right on the (0,0) mark, but people who were working
  together pre-apocalypse can easily find each other post.  For example, a
  mother standing near her baby will still be standing near her baby post.
  Part of #1069

--Apocalypse now clears Eve location and several other things.  Fixes #1077

--During soft-shutdown, if all players die of old age, and the only players
  left are ghosts, the ghosts are now force-killed.  Otherwise, remaining
  ghosts could delay server shutdown indefinitely.  Fixes #1030
